<resources>
    <string name="app_name">Your Tasks!</string>
    <string name="tab_text_1">To Do</string>
    <string name="tab_text_2">Done</string>

    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="create_task_button">Save</string>
    <string name="delete_task_button">Delete</string>
    <string name="priority">Prio</string>
    <string name="empty_not_saved">Empty value - not saved!</string>
    <string name="save">Save</string>
    <string name="nothing_edited">No updated values.</string>
    <string name="pick_date">Edit Due</string>
    <string name="due_date_example">01/12/2020</string>
    <string name="UndoText">UNDO</string>

    <string name="title_activity_tasks">Just do it</string>
    <string name="prompt_email">Type existing Project Id</string>
    <string name="prompt_password">Your Project Name</string>
    <string name="action_sign_in">Select project </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_create_new">Create new project </string>
    <string name="welcome">"Welcome to "</string>
    <string name="or">"OR"</string>
    <string name="invalid_username">Not a valid project id</string>
    <string name="invalid_password">Not a valid project name</string>
    <string name="login_failed">"Project selection failed"</string>
</resources>
