<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddEditTaskActivity"
    tools:showIn="@layout/activity_add_task">


    <EditText
        android:id="@+id/newTaskText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Title"
        android:inputType="text" />

    <EditText
        android:id="@+id/newTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Description"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Priority:"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/number_picker_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/due_date_value"
            android:text="@string/due_date_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintStart_toEndOf="@id/number_picker_priority"/>

        <Button
            android:id="@+id/due_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showDatePickerDialog"
            android:text="@string/pick_date"
            android:layout_margin="10dp"/>
    </LinearLayout>



    <Spinner
        android:id="@+id/status_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <Button
        android:id="@+id/create_task_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="#009688"
        android:text="@string/create_task_button"
        android:textColor="#FAF6F6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskDescription" />

    <Button
        android:id="@+id/delete_task_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#D81B60"
        android:text="@string/delete_task_button"
        android:textColor="#FBF9F9" />

</LinearLayout>